# point_align

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
examples/: no_pertubation_random.c
include/: hashmap.h  point_align.h
src/: main.c  point_align.c
tests/: hashmap.c
